overflow and z index issue fixed

--- a/src/app/components/core/configuration-manager/configuration-group/configuration-group.component.css
+++ b/src/app/components/core/configuration-manager/configuration-group/configuration-group.component.css
@@ -12,7 +12,8 @@
   border-top-right-radius: 0 !important;
   position: relative;
   padding: 1rem 1rem 0 1rem;
-  overflow: visible;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
 
 .custom-quickview-configuration {
