--- a/src/app/components/core/configuration-manager/kv-list-type-configuration/kv-list-type-configuration.component.css
+++ b/src/app/components/core/configuration-manager/kv-list-type-configuration/kv-list-type-configuration.component.css
@@ -107,5 +107,5 @@
   position: sticky;
   top: -20px;
   background: white;
-  z-index: 100;
+  z-index: 10;
 }
